# scintia

./: README.md  pyproject.toml
scintia/: archive_functions.py  ds_psr.py  fit_thth.py  gbt_fits.py  models_thth.py  scint_scales.py  wsrt_fits.py
scintia.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
